--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,24 @@
 # ─────────── Dependencies ───────────
-/node_modules
+/node_modules/
 /.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # ─────────── Testing ───────────
-/coverage
+/coverage/
 
 # ─────────── Next.js ───────────
 /.next/
 /out/
-/build
-/vercel
+/build/
+/vercel/
 
 # ─────────── Environment Files ───────────
 .env
 .env*.local
+.env.development
+.env.production
+.env.test
 
 # ─────────── Prisma ───────────
 prisma/dev.db
@@ -30,6 +33,7 @@ docker-compose.yml
 
 # ─────────── Turborepo / Caching ───────────
 /.turbo/
+/dist/
 
 # ─────────── VS Code ───────────
 .vscode/
@@ -43,6 +47,7 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # ─────────── TypeScript ───────────
 *.tsbuildinfo
